@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.TH VOIKKOSPELL 1 "2007-12-29"
+.TH VOIKKOSPELL 1 "2007-12-30"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .\" Some roff macros, for reference:
@@ -84,6 +84,9 @@ as the value of option VOIKKO_INTERSECT_COMPOUND_LEVEL.
 (voikkospell)
 .TP
 .BI accept_extra_hyphens= n
+(voikkospell)
+.TP
+.BI accept_missing_hyphens= n
 (voikkospell)
 .TP
 .BI ocr_suggestions= n
