@@ -141,6 +141,10 @@ int main(int argc, char ** argv) {
 			voikko_set_bool_option(handle, VOIKKO_OPT_ACCEPT_EXTRA_HYPHENS, 1);
 		else if (strcmp(argv[i], "accept_extra_hyphens=0") == 0)
 			voikko_set_bool_option(handle, VOIKKO_OPT_ACCEPT_EXTRA_HYPHENS, 0);
+		else if (strcmp(argv[i], "accept_missing_hyphens=1") == 0)
+			voikko_set_bool_option(handle, VOIKKO_OPT_ACCEPT_MISSING_HYPHENS, 1);
+		else if (strcmp(argv[i], "accept_missing_hyphens=0") == 0)
+			voikko_set_bool_option(handle, VOIKKO_OPT_ACCEPT_MISSING_HYPHENS, 0);
 		else if (strcmp(argv[i], "ocr_suggestions=1") == 0)
 			voikko_set_bool_option(handle, VOIKKO_OPT_OCR_SUGGESTIONS, 1);
 		else if (strcmp(argv[i], "ocr_suggestions=0") == 0)
